--- a/views/loans.ejs
+++ b/views/loans.ejs
@@ -3,7 +3,7 @@
     <div id="app">
         <%- include("template/navbar") %>
             <main>
-                <form>
+                <form v-cloak>
 
                     <h2>Loans</h2>
 
