--- a/views/transfers.ejs
+++ b/views/transfers.ejs
@@ -4,7 +4,7 @@
             <main>
 
 
-                <form>
+                <form v-cloak>
                     <h2 for="transfers">Transfer</h2>
                     <select v-model="transfer" name="transfers" id="transfers">
                         <option value="">--Select Type Transfer--</option>
