--- a/views/cards.ejs
+++ b/views/cards.ejs
@@ -20,21 +20,22 @@
                                         <h4>Debit Cards</h4>
                                     </div>
 
-                                    <div v-for="card in cardsDebito" class="card">
+                                    <div v-cloak v-for="card in cardsDebito" class="card">
                                         <div class="card__front card__part" :class="card.color">
                                             <img class="card__front-square card__square" src="img/chip.png">
                                             <img class="card__front-logo card__logo"
                                                 src="https://logodownload.org/wp-content/uploads/2016/10/visa-logo.png">
-                                            <p class="card_numer" style="color: black">{{card.number}}</p>
+                                            <p v-cloak class="card_numer" style="color: black">{{card.number}}</p>
                                             <div class="card__space-75">
 
-                                                <p class="card__info" style="color: black">{{card.cardholder}}</p>
-                                                <p class="card__info" style="color: black">{{card.color}}</p>
+                                                <p v-cloak class="card__info" style="color: black">{{card.cardholder}}
+                                                </p>
+                                                <p v-cloak class="card__info" style="color: black">{{card.color}}</p>
 
                                             </div>
                                             <div class="card__space-25">
-                                                <span class="card__label">{{fecha(card.thru_date)}}</span>
-                                                <p class="card__label">{{fecha(card.from_date)}}</p>
+                                                <span v-cloak class="card__label">{{fecha(card.thru_date)}}</span>
+                                                <p v-cloak class="card__label">{{fecha(card.from_date)}}</p>
                                             </div>
                                         </div>
 
@@ -42,7 +43,7 @@
                                             <div class=" card__black-line"></div>
                                             <div class="card__back-content">
                                                 <div class="card__secret">
-                                                    <p class="card__secret--last">{{card.cvv}}</p>
+                                                    <p v-cloak class="card__secret--last">{{card.cvv}}</p>
                                                 </div>
                                                 <img class="card__back-square card__square" src="img/chip.png">
                                                 <img class="card__back-logo card__logo"
@@ -72,29 +73,30 @@
                                     <div class="creditCardsTitle cardsTitle">
                                         <h4>Credit Cards</h4>
                                     </div>
-                                    <div v-for="card in cardsCredito" class="card">
+                                    <div v-cloak v-for="card in cardsCredito" class="card">
                                         <div class="card__front card__part" :class="card.color">
                                             <img class=" card__front-square card__square" src="img/chip.png">
                                             <img class="card__front-logo card__logo"
                                                 src="https://logodownload.org/wp-content/uploads/2016/10/visa-logo.png">
-                                            <p class="card_numer" style="color: black">{{card.number}}</p>
+                                            <p v-cloak class="card_numer" style="color: black">{{card.number}}</p>
                                             <div class="card__space-75">
 
-                                                <p class="card__info" style="color: black">{{card.cardholder}}</p>
-                                                <p class="card__info" style="color: black">{{card.color}}</p>
+                                                <p v-cloak class="card__info" style="color: black">{{card.cardholder}}
+                                                </p>
+                                                <p v-cloak class="card__info" style="color: black">{{card.color}}</p>
                                                 <span v-if="estaVencida(card.thru_date) " style="color: red;">Esta
                                                     vencida</span>
                                             </div>
                                             <div class="card__space-25">
-                                                <span class="card__label">{{fecha(card.thru_date)}}</span>
-                                                <p class="card__label">{{fecha(card.from_date)}}</p>
+                                                <span v-cloak class="card__label">{{fecha(card.thru_date)}}</span>
+                                                <p v-cloak class="card__label">{{fecha(card.from_date)}}</p>
                                             </div>
                                         </div>
                                         <div class="card__back card__part" :class="card.color">
                                             <div class=" card__black-line"></div>
                                             <div class="card__back-content">
                                                 <div class="card__secret">
-                                                    <p class="card__secret--last">{{card.cvv}}</p>
+                                                    <p v-cloak class="card__secret--last">{{card.cvv}}</p>
                                                 </div>
                                                 <img class="card__back-square card__square" src="img/chip.png">
                                                 <img class="card__back-logo card__logo"
@@ -130,10 +132,13 @@
                 </div>
             </div>
     </div>
+
     <!-- script axios -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- script vue -->
     <script src="https://unpkg.com/vue@next"></script>
+    <!-- swal -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
